--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
 body header {
-    background-color: #40FF07;
+    background-color: rgba(0,0,0,0.44);
     padding-top: 0px;
-    margin-top: 89px;
-    margin-left: 56px;
-    margin-right: 242px;
-    margin-bottom: 10px;
+}
+.container {
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
